[package]
name = "netshader"
version = "0.1.0"
authors = ["jesse"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.19.0"
nalgebra-glm = "0.5.0"
serde = "1.0.104"
serde_derive = "1.0.104"
stdweb = "0.4.20"
stdweb-derive = "0.5.3"
yew = { git = "https://github.com/yewstack/yew" }

[dependencies.rand]
version = "0.7.3"
features = ["stdweb"]
